Asociar y desasociar categorias a intervalos
