# app/Http/Controllers/Interval/IntervalAttachCategoryController.php
@@ -10,51 +10,52 @@ use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Validator;
 use App\Http\Controllers\Interval\ControlIntervalTrait;
 
-class IntervalUpdateController extends Controller
+class IntervalAttachCategoryController extends Controller
 {
     use ApiFeedbackSender, ControlIntervalTrait;
 
     /**
-     * @OA\Put(
-     *  path="/api/intervals/{id}",
+     * @OA\Post(
+     *  path="/api/intervals/{id}/attach-category",
      *  tags={"interval"},
-     *  summary="Actualiza un intervalo de trabajo",
-     *  description="Actualizar un intervalo de trabajo que corresponda con un identificador dado",
-     *  operationId="updateInterval",
+     *  summary="Gestionar categorías de intervalos de trabajo",
+     *  description="Añadir o eliminar la asociación de una categoría a un intervalo de trabajo",
+     *  operationId="attachDetachCategoryInterval",
      *  @OA\Parameter(ref="#/components/parameters/IntervalIdParameter"),
      *  @OA\Parameter(ref="#/components/parameters/acceptJsonHeader"),
      *  @OA\Parameter(ref="#/components/parameters/requestedWith"),
      *  @OA\RequestBody(
      *      required=true,
-     *      description="Datos del intervalo de trabajo a actualizar",
-     *      @OA\MediaType(
-     *          mediaType="application/x-www-form-urlencoded",
-     *          @OA\Schema(ref="#/components/schemas/Interval")
-     *      )
+     *      description="Información sobre la categoría y el estado que se pretende aplicar al intervalo.",
+     *      @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(
+ *                 property="category_id",
+ *                 type="integer",
+ *                 description="Identificador de la categoría."
+ *             ),
+ *             @OA\Property(
+ *                 property="attached",
+ *                 type="boolean",
+ *                 default=false,
+ *                 description="Determina si está adjunto o no. Si no se proporciona, se considera 'false'."
+ *             )
+ *         )
      *  ),
      *  @OA\Response(
-     *     response=200,
-     *     description="Operación exitosa",
-     *     @OA\JsonContent(
+     *      response=200, 
+     *      description="Categoría asociada o desasociada con éxito",
+     *      @OA\JsonContent(
      *         type="object",
      *         @OA\Property(property="message", type="string", description="Mensaje de respuesta"),
-     *         @OA\Property(
-     *              property="data",
-     *              ref="#/components/schemas/Interval"
-     *         )
      *     ),
      *  ),
-     * @OA\Response(
+     *  @OA\Response(
      *      response=400,
      *      description="Error de validación",
      *      ref="#/components/responses/ValidationErrorResponse"
      *  ),
-     *  @OA\Response(
-     *      response=404,
-     *      description="No existe ese intervalo de trabajo",
-     *      ref="#/components/responses/NotFoundResponse"
-     *  ),
-     *  @OA\Response(
+     * @OA\Response(
      *      response=403,
      *      description="No autorizado",
      *      ref="#/components/responses/NotAuthorizedResponse"
@@ -73,8 +74,8 @@ class IntervalUpdateController extends Controller
      *  }
      * )
      */
-    public function update(Request $request, string $id)
-    {
+
+    public function attachCategory(Request $request, $id) {
         $user = Auth::user();
 
         $interval = Interval::find($id);
@@ -86,23 +87,25 @@ class IntervalUpdateController extends Controller
             return $this->sendError('No estás autorizado para realizar esta acción', 403);
         }
 
-        $validateInterval = Validator::make($request->all(), $this->getIntervalUpdateValidationRules());
-        if($validateInterval->fails()){
+        $validateInput = Validator::make($request->all(), $this->intervalCategoryValidationRules);
+        if($validateInput->fails()){
             return $this->sendValidationError(
                 'Ha ocurrido un error de validación',
-                $validateInterval->errors()
+                $validateInput->errors()
             );
         }
 
-        if(! $this->isProjectIdValid($user, $request->project_id)) {
-            return $this->sendError('No estás autorizado para trabajar con ese proyecto', 403);
+        if(! $this->isCategoryIdValid($user, $request->category_id)) {
+            return $this->sendError('No estás autorizado para trabajar con esa categoría', 403);
         }
 
-        $interval->project_id = $request->project_id;
-        $interval->start_time = $request->start_time;
-        $interval->end_time = $request->end_time;
-        $interval->save();
+        $interval->categories()->detach($request->category_id);
+        $message = "Categoría desasociada";
+        if($request->attached) {
+            $interval->categories()->attach($request->category_id);
+            $message = "Categoría asociada";
+        }
 
-        return $this->sendSuccess('Intervalo actualizado', $interval);
+        return $this->sendSuccess($message, null);
     }
 }
